--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="MESIホーム">
+    <meta property="og:description" content="MESIのホームページです">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.mesihome.com/">
+    <meta property="og:image" content="/mesi.png">
     <title>MESIホーム</title>
   </head>
   <body>
