OGP画像パスの修正

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="MESIのホームページです">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.mesihome.com/">
-    <meta property="og:image" content="/mesi.png">
+    <meta property="og:image" content="https://www.mesihome.com/mesi.png">
     <title>MESIホーム</title>
   </head>
   <body>
